[tool.poetry]
name = "keep.time"
version = "0.1.0"
description = ""
authors = ["G. Bristow"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
Kivy = {extras = ["base"], version = "^2.1.0"}
kivymd = "^0.104.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
